<resources>
    <string name="app_name">Selections</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="Controller" translatable="false">Controller</string>
    <string name="language">Language</string>
    <string name="Test_Mode">Test Mode</string>
    <string name="Actions" translatable="false">Actions</string>
    <string name="System_time">System time:</string>
    <string name="Updata_data">Update Data</string>
    <string name="data_pp" translatable="false">Data PP :</string>
    <string name="data_content" translatable="false">Data Content :</string>
    <string name="programid">ProgramID:</string>
    <string name="vendor">Vendor:</string>
    <string name="ispaused">isPaused:</string>
    <string name="hour">Hour:</string>
    <string name="minute">Minute:</string>
    <string name="set_name">Set Name:</string>
    <string name="set_date">Set Date:</string>
    <string name="view">View</string>
    <string name="select_all">Select All</string>
    <string name="isautoaddversion" translatable="false">IsAutoVersion:</string>
    <string name="remark">ReMark:</string>
    <string name="official">OFFICIAL</string>
    <string name="test">TEST</string>
    <string name="notexit">Not Exit</string>
    <string name="ok">OK</string>
    <string name="enter_id">Enter ID :</string>
    <string name="loading">Loading...</string>
    <string name="not_exist">Not Exist</string>
    <string name="check_network">Please check your network.</string>
    <string name="error">Error</string>
    <string name="moblie">"Mobile: "</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_all">Delete All</string>
    <string name="ask_for_delete">"Are you sure to delete all date of "</string>
    <string name="cancel">Cancel</string>
    <string name="n_null">Data is null</string>
    <string name="thermo">thermo:</string>
    <string name="thermo_time">thermo time:</string>
    <string name="pressure">pressure:</string>
    <string name="pressure_time">pressure time:</string>
    <string name="typetittle">typeTittle:</string>
    <string name="modeltittle">modelTittle:</string>
    <string name="please_research">Please research.</string>
    <string name="search_is_not_exit">Your search is not exist</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="delete_local_data">Delete Local Data</string>
    <string name="synchronize_data">Synchronize Data</string>
    <string name="ask_for_a_lot_data">Take a second.</string>
    <string name="ask_for_delete_all_data">Are you sure to delete all data?</string>
    <string name="done">Done</string>
    <string name="fail">Fail</string>

</resources>
