<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:visible="true"/>
    </group>

    <item android:title="@string/Controller"
        android:id="@+id/controller">
        <menu>
            <item android:title="@string/language"
                android:icon="@drawable/ic_language"
                android:id="@+id/menu_item_language" />
            <item android:title="@string/Test_Mode"
                android:icon="@drawable/ic_test"
                android:id="@+id/menu_item_test_mode"
                app:actionLayout="@layout/switch_test"
                android:visible="false"/>
            <item android:title="@string/Actions"
                android:icon="@drawable/ic_ree"
                android:id="@+id/menu_item_actions"
                android:visible="false"/>
        </menu>
    </item>
</menu>
